tests/__snapshots__/config-failFast---failFast-isString-stderr.snap.txt
Error: Type 'string' is identical to type 'string'.

  1 | import { expect, test } from "tstyche";
  2 | test("is string?", () => {
  3 |   expect<string>().type.not.toBe<string>();
    |                                  ~~~~~~
  4 |   expect<string>().type.not.toBe<string>();
  5 | });
  6 | 

      at ./__typetests__/isString.tst.ts:3:34 ❭ is string?

